--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,21 +2,24 @@
   "name": "@ignite-ui/react",
   "version": "1.0.0",
   "description": "",
-	"main": "./dist/index.js",
-	"module": "./dist/index.mjs",
-	"types": "./dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
-		"build": "tsup src/index.ts --format esm,cjs --dts",
-		"dev": "tsup src/index.ts --format esm,cjs --dts --watch",
-		"lint": "eslint src/**/*.ts* --fix"	
+    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
+    "dev": "tsup src/index.tsx --format esm,cjs --dts --watch --external react",
+    "lint": "eslint src/**/*.ts* --fix"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-		"@ignite-ui/tokens": "*",
-		"@ignite-ui/ts-config": "*",
-		"@ignite-ui/eslint-config": "*",
+    "@ignite-ui/eslint-config": "*",
+    "@ignite-ui/tokens": "*",
+    "@ignite-ui/ts-config": "*",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "react": "^18.2.0",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
   }
