--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
 	"private": true,
 	"workspaces": [
 		"packages/*"
-	]
+	],
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"uninstall": "^0.0.0"
+	}
 }
