--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "turbo run build"
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.0.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"uninstall": "^0.0.0"
