--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
 	],
 	"scripts": {
 		"dev": "turbo run dev --parallel",
-		"build": "turbo run build"
+		"build": "turbo run build",
+		"changeset": "changeset ",
+		"version-packages": "changeset version",
+		"release": "turbo run build --filter=@md-ignite-ui/docs && changeset publish"
 	},
 	"dependencies": {
 		"@radix-ui/react-checkbox": "^1.0.4",
@@ -14,6 +17,7 @@
 		"uninstall": "^0.0.0"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.26.1",
 		"turbo": "^1.10.3"
 	}
 }
