--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/docs",
+  "name": "@md-ignite-ui/docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -27,10 +27,10 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@md-ignite-ui/eslint-config": "*",
+    "@md-ignite-ui/react": "*",
+    "@md-ignite-ui/tokens": "*",
+    "@md-ignite-ui/ts-config": "*",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@storybook/addon-a11y": "^7.0.22",
     "phosphor-react": "^1.4.1",
