--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,6 +19,10 @@ jobs:
 
       - run: npm ci
       - run: npm run build
+        env:
+          TURBO_TOKEN: r7mEsJRhda32ZI66Z5lExjpo
+          TURBO_TEAM: marcusdavanco
+
 
       - name: Deploy storybook
         working-directory: ./packages/docs
