ci: Use vercel token as secret

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,7 +22,7 @@ jobs:
       - run: npm ci
       - run: npm run build
         env:
-          TURBO_TOKEN: r7mEsJRhda32ZI66Z5lExjpo
+          TURBO_TOKEN: ${{ secrets.VERCEL_SECRET }}
           TURBO_TEAM: marcusdavanco
 
 
