--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "turbo run build",
 		"changeset": "changeset ",
 		"version-packages": "changeset version",
-		"release": "turbo run build --filter=@md-ignite-ui/docs && changeset publish"
+		"release": "turbo run build --filter=!docs && changeset publish"
 	},
 	"dependencies": {
 		"@radix-ui/react-checkbox": "^1.0.4",
