--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-toast": "^1.1.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"uninstall": "^0.0.0"
